examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__class_definitions@class A:  def b(self):    return c.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        CompoundStatement(
            ClassDefinition(
                ClassDefinition {
                    type_parameters: None,
                    name: Identifier {
                        [RANGE]
                    },
                    body: Block {
                        alternative: [],
                        children: [
                            CompoundStatement(
                                FunctionDefinition(
                                    FunctionDefinition {
                                        name: Identifier {
                                            [RANGE]
                                        },
                                        body: Block {
                                            alternative: [],
                                            children: [
                                                SimpleStatement(
                                                    ReturnStatement(
                                                        ReturnStatement {
                                                            children: Some(
                                                                Expression(
                                                                    PrimaryExpression(
                                                                        Identifier(
                                                                            Identifier {
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                    ),
                                                                ),
                                                            ),
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ],
                                            [RANGE]
                                        },
                                        return_type: None,
                                        type_parameters: None,
                                        parameters: Parameters {
                                            children: [
                                                Identifier(
                                                    Identifier {
                                                        [RANGE]
                                                    },
                                                ),
                                            ],
                                            [RANGE]
                                        },
                                        [RANGE]
                                    },
                                ),
                            ),
                        ],
                        [RANGE]
                    },
                    superclasses: None,
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
