examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__class_definitions@class B(method1):  def method1(self):    return.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        CompoundStatement(
            ClassDefinition(
                ClassDefinition {
                    type_parameters: None,
                    name: Identifier {
                        [RANGE]
                    },
                    body: Block {
                        alternative: [],
                        children: [
                            CompoundStatement(
                                FunctionDefinition(
                                    FunctionDefinition {
                                        name: Identifier {
                                            [RANGE]
                                        },
                                        body: Block {
                                            alternative: [],
                                            children: [
                                                SimpleStatement(
                                                    ReturnStatement(
                                                        ReturnStatement {
                                                            children: None,
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ],
                                            [RANGE]
                                        },
                                        return_type: None,
                                        type_parameters: None,
                                        parameters: Parameters {
                                            children: [
                                                Identifier(
                                                    Identifier {
                                                        [RANGE]
                                                    },
                                                ),
                                            ],
                                            [RANGE]
                                        },
                                        [RANGE]
                                    },
                                ),
                            ),
                        ],
                        [RANGE]
                    },
                    superclasses: Some(
                        ArgumentList {
                            children: [
                                Expression(
                                    PrimaryExpression(
                                        Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                    ),
                                ),
                            ],
                            [RANGE]
                        },
                    ),
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
