examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__class_definitions@class D(Sequence[T, U]):  pass.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        CompoundStatement(
            ClassDefinition(
                ClassDefinition {
                    type_parameters: None,
                    name: Identifier {
                        [RANGE]
                    },
                    body: Block {
                        alternative: [],
                        children: [
                            SimpleStatement(
                                PassStatement(
                                    PassStatement {
                                        [RANGE]
                                    },
                                ),
                            ),
                        ],
                        [RANGE]
                    },
                    superclasses: Some(
                        ArgumentList {
                            children: [
                                Expression(
                                    PrimaryExpression(
                                        Subscript(
                                            Subscript {
                                                value: Identifier(
                                                    Identifier {
                                                        [RANGE]
                                                    },
                                                ),
                                                subscript: [
                                                    Expression(
                                                        PrimaryExpression(
                                                            Identifier(
                                                                Identifier {
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                    Expression(
                                                        PrimaryExpression(
                                                            Identifier(
                                                                Identifier {
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                ],
                                                [RANGE]
                                            },
                                        ),
                                    ),
                                ),
                            ],
                            [RANGE]
                        },
                    ),
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
