examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__class_definitions_with_superclasses@class AB C  def d    e.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        CompoundStatement(
            ClassDefinition(
                ClassDefinition {
                    type_parameters: None,
                    name: Identifier {
                        [RANGE]
                    },
                    body: Block {
                        alternative: [],
                        children: [
                            CompoundStatement(
                                FunctionDefinition(
                                    FunctionDefinition {
                                        name: Identifier {
                                            [RANGE]
                                        },
                                        body: Block {
                                            alternative: [],
                                            children: [
                                                SimpleStatement(
                                                    ExpressionStatement(
                                                        ExpressionStatement {
                                                            children: [
                                                                Expression(
                                                                    PrimaryExpression(
                                                                        Identifier(
                                                                            Identifier {
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                    ),
                                                                ),
                                                            ],
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ],
                                            [RANGE]
                                        },
                                        return_type: None,
                                        type_parameters: None,
                                        parameters: Parameters {
                                            children: [],
                                            [RANGE]
                                        },
                                        [RANGE]
                                    },
                                ),
                            ),
                        ],
                        [RANGE]
                    },
                    superclasses: Some(
                        ArgumentList {
                            children: [
                                Expression(
                                    PrimaryExpression(
                                        Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                    ),
                                ),
                                Expression(
                                    PrimaryExpression(
                                        Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                    ),
                                ),
                            ],
                            [RANGE]
                        },
                    ),
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
