examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__control_flow_statements.snap
---
source: examples/ast-python/src/tests/corpus/statements.rs
expression: "get_ast(& db, file)"
---
ParsedAst {
    nodes: [
        Module {
            children: [
                AstNodeId {
                    id: 1,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
            ],
            _range: Range {
                start_byte: 1,
                end_byte: 39,
                start_point: Point {
                    row: 1,
                    column: 0,
                },
                end_point: Point {
                    row: 5,
                    column: 0,
                },
            },
            _id: 0,
            _parent: None,
            _is_missing: false,
        },
        CompoundStatement(
            WhileStatement(
                WhileStatement {
                    alternative: None,
                    body: AstNodeId {
                        id: 3,
                        _marker: PhantomData<ast_python::generated::Block>,
                    },
                    condition: AstNodeId {
                        id: 2,
                        _marker: PhantomData<ast_python::generated::Expression>,
                    },
                    _range: Range {
                        start_byte: 1,
                        end_byte: 38,
                        start_point: Point {
                            row: 1,
                            column: 0,
                        },
                        end_point: Point {
                            row: 4,
                            column: 10,
                        },
                    },
                    _id: 1,
                    _parent: Some(
                        0,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        PrimaryExpression(
            Identifier(
                Identifier {
                    _range: Range {
                        start_byte: 7,
                        end_byte: 11,
                        start_point: Point {
                            row: 1,
                            column: 6,
                        },
                        end_point: Point {
                            row: 1,
                            column: 10,
                        },
                    },
                    _id: 2,
                    _parent: Some(
                        1,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        Block {
            alternative: [],
            children: [
                AstNodeId {
                    id: 4,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
                AstNodeId {
                    id: 5,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
                AstNodeId {
                    id: 6,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
            ],
            _range: Range {
                start_byte: 15,
                end_byte: 38,
                start_point: Point {
                    row: 2,
                    column: 2,
                },
                end_point: Point {
                    row: 4,
                    column: 10,
                },
            },
            _id: 3,
            _parent: Some(
                1,
            ),
            _is_missing: false,
        },
        SimpleStatement(
            PassStatement(
                PassStatement {
                    _range: Range {
                        start_byte: 15,
                        end_byte: 19,
                        start_point: Point {
                            row: 2,
                            column: 2,
                        },
                        end_point: Point {
                            row: 2,
                            column: 6,
                        },
                    },
                    _id: 4,
                    _parent: Some(
                        3,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        SimpleStatement(
            BreakStatement(
                BreakStatement {
                    _range: Range {
                        start_byte: 22,
                        end_byte: 27,
                        start_point: Point {
                            row: 3,
                            column: 2,
                        },
                        end_point: Point {
                            row: 3,
                            column: 7,
                        },
                    },
                    _id: 5,
                    _parent: Some(
                        3,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        SimpleStatement(
            ContinueStatement(
                ContinueStatement {
                    _range: Range {
                        start_byte: 30,
                        end_byte: 38,
                        start_point: Point {
                            row: 4,
                            column: 2,
                        },
                        end_point: Point {
                            row: 4,
                            column: 10,
                        },
                    },
                    _id: 6,
                    _parent: Some(
                        3,
                    ),
                    _is_missing: false,
                },
            ),
        ),
    ],
}
