examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__control_flow_statements@while true:  pass  break  continue.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        CompoundStatement(
            WhileStatement(
                WhileStatement {
                    alternative: None,
                    body: Block {
                        alternative: [],
                        children: [
                            SimpleStatement(
                                PassStatement(
                                    PassStatement {
                                        [RANGE]
                                    },
                                ),
                            ),
                            SimpleStatement(
                                BreakStatement(
                                    BreakStatement {
                                        [RANGE]
                                    },
                                ),
                            ),
                            SimpleStatement(
                                ContinueStatement(
                                    ContinueStatement {
                                        [RANGE]
                                    },
                                ),
                            ),
                        ],
                        [RANGE]
                    },
                    condition: PrimaryExpression(
                        Identifier(
                            Identifier {
                                [RANGE]
                            },
                        ),
                    ),
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
