examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__decorated_definitions@ @f()  async def f():    g.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        CompoundStatement(
            DecoratedDefinition(
                DecoratedDefinition {
                    definition: FunctionDefinition(
                        FunctionDefinition {
                            name: Identifier {
                                [RANGE]
                            },
                            body: Block {
                                alternative: [],
                                children: [
                                    SimpleStatement(
                                        ExpressionStatement(
                                            ExpressionStatement {
                                                children: [
                                                    Expression(
                                                        PrimaryExpression(
                                                            Identifier(
                                                                Identifier {
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                ],
                                                [RANGE]
                                            },
                                        ),
                                    ),
                                ],
                                [RANGE]
                            },
                            return_type: None,
                            type_parameters: None,
                            parameters: Parameters {
                                children: [],
                                [RANGE]
                            },
                            [RANGE]
                        },
                    ),
                    children: [
                        Decorator {
                            children: PrimaryExpression(
                                Call(
                                    Call {
                                        function: Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                        arguments: ArgumentList(
                                            ArgumentList {
                                                children: [],
                                                [RANGE]
                                            },
                                        ),
                                        [RANGE]
                                    },
                                ),
                            ),
                            [RANGE]
                        },
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
